--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,20 @@
-html, body {
-	height: 100%
+html {
+    height: 100%;
+    box-sizing: border-box;
+}
+
+/* Apply to all elements */
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
 }
 
 body {
-	padding: 0;
+    position: relative;
     margin: 0;
-    background-image: url("../images/bg-img.png");
-    background-repeat: repeat;
+    padding-bottom: 6rem;
+    min-height: 100%;
 }
 
 /* Overall Nav settings */
@@ -46,13 +54,19 @@ body {
 .inner-content {
 	max-width: 960px;
 	margin: 0 auto;
-	min-height: calc(100vh - 161px)
+}
+
+.info-block {
+    background-color: white;
+    padding: 20px;
 }
 
 .footer {
-	background-color: #333;
-	text-align: center;
-	color: #f2f2f2;
-	line-height: 50px;
-	height: 50px;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: #333;
+    text-align: center;
+    color: #f2f2f2;
 }
