--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,8 @@ body {
     margin: 0;
     padding-bottom: 6rem;
     min-height: 100%;
+    background-image: url(../images/bg-img.png);
+    background-repeat: repeat;
 }
 
 /* Overall Nav settings */
