--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,10 +20,15 @@ body {
 }
 
 /* Overall Nav settings */
+.nav-wrapper {
+    background-color: #333333bb;
+}
+
 .nav-normal {
-	background-color: #333333bb;
 	overflow: hidden;
-	height: 75px;
+    height: 75px;
+    max-width: 960px;
+    margin: 0 auto;
 }
 
 .brand {
