--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,6 +66,17 @@ body {
     margin-top: 20px;
     border-radius: 25px;
     border: 2px solid #7F7373;
+    overflow: auto;
+}
+
+.profile-image {
+    max-width: 10rem;
+    height: auto;
+    float: left;
+    margin-right: 20px;
+    border: 2px solid #333;
+    padding: 2px;
+    border-radius: 50%;
 }
 
 .footer {
