style changes to nav

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,6 +57,11 @@ body {
 	color: black;
 }
 
+.nav-normal a#active {
+    background-color: #ddd;
+    color: black;
+}
+
 /* Content Settings */
 .content-wrapper {
 	max-width: 960px;
