--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,11 @@ body {
     min-height: 100%;
     background-image: url(../images/bg-img.png);
     background-repeat: repeat;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+}
+
+h1, .brand {
+    font-family: 'Georgia', Times, 'Times New Roman', serif;
 }
 
 /* Overall Nav settings */
@@ -34,14 +39,14 @@ body {
 .brand {
 	float: left;
 	line-height: 75px;
-	margin-left: 20px;
+    color: #f2f2f2;
+    font-size: 2rem;
+    background-color: #490909;
 }
 
 .brand p {
-	font-size: 2rem;
-	color: #f2f2f2;
-	margin: 0;
-	padding: 0;
+	margin: 0 20px;
+    padding: 0;
 }
 
 .nav-normal a {
