--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,11 +72,49 @@ h1, .brand {
 	max-width: 960px;
     margin: 0 auto;
     background-color: white;
-    padding: 20px;
+    padding: 0 20px 20px 20px;
     margin-top: 20px;
     border-radius: 25px;
     border: 2px solid #7F7373;
     overflow: auto;
+}
+
+/* Form Style */
+form label {
+    display: block;
+    margin-top: 20px;
+}
+
+form label:first-child {
+    margin-top: 0;
+}
+
+input[type=text], input[type=email] {
+    width: 100%;
+    padding: 12px 20px;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+}
+
+.messageEntry {
+    width: 100%;
+    height: 150px;
+    resize: none;
+    border: 1px solid #ccc;
+    padding: 12px 20px;
+    border-radius: 4px;
+}
+
+input[type=submit] {
+    background-color: #7f7373;
+    padding: 14px 20px;
+    margin-top: 8px;
+    border-radius: 4px;
+    border: none;
+}
+
+input[type=submit]:hover {
+    background-color: #7f7373bb;
 }
 
 .profile-image {
