--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,12 +26,11 @@ h1, .brand {
 
 /* Overall Nav settings */
 .nav-wrapper {
-    background-color: #333333bb;
+    background-color: rgba(51, 51, 51, 0.733);
 }
 
 .nav-normal {
 	overflow: hidden;
-    height: 75px;
     max-width: 960px;
     margin: 0 auto;
 }
@@ -54,17 +53,32 @@ h1, .brand {
 	text-decoration: none;
 	color: #f2f2f2;
 	padding: 0px 16px;
-	line-height: 75px;
+    line-height: 75px;
+    -webkit-transition: background-color 2s;
+    transition: background-color 2s;
 }
 
 .nav-normal a:hover {
 	background-color: #ddd;
-	color: black;
+    color: black;
 }
 
 .nav-normal a#active {
     background-color: #ddd;
     color: black;
+}
+
+/* Responsive Layout Adjustments */
+@media only screen and (max-width: 700px) {
+    .nav-normal a {
+        float: none;
+        display: block;
+        line-height: 25px;
+    }
+
+    .brand {
+        margin-right: 8px;
+    }
 }
 
 /* Content Settings */
@@ -159,7 +173,7 @@ input[type=submit] {
 }
 
 input[type=submit]:hover {
-    background-color: #7f7373bb;
+    background-color: rgba(127, 115, 115, 0.733);
 }
 
 .profile-image {
@@ -172,12 +186,21 @@ input[type=submit]:hover {
     border-radius: 50%;
 }
 
+/* Responsive Layout Adjustments */
+@media only screen and (max-width: 580px) {
+    .profile-image {
+        float: none;
+        display: block;
+        margin: 0 auto;
+    }
+}
+
 .footer {
     position: absolute;
     right: 0;
     bottom: 0;
     left: 0;
-    background-color: #333333bb;
+    background-color: rgba(51, 51, 51, 0.733);
     text-align: center;
     color: #f2f2f2;
 }
